Se actualizaron tamaños y espacios

--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,22 @@ header {
   background-position: center top;
 }
 
+header h1, header .h1 {
+  font-size: 46px;
+}
+
+main h3, main .h3 {
+  font-size: 33px;
+}
+
+.parrafos {
+  font-size: 18px;
+}
+
+.alto-0 {
+  height: 150px;
+}
+
 .alto-1 {
   height: 130px;
 }
@@ -15,7 +31,7 @@ header {
 }
 
 .alto-3 {
-  height: 80px;
+  height: 83px;
 }
 
 .alto-4 {
@@ -153,7 +169,7 @@ body {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
- h5, .h5, h3, .h3, h1, .h1 {
+ h5, .h5, h4, .h4, h3, .h3, h1, .h1 {
   margin-top: 0;
   margin-bottom: 0.5rem;
   font-weight: 500;
@@ -175,6 +191,15 @@ h3, .h3 {
 @media (min-width: 1200px) {
   h3, .h3 {
     font-size: 1.75rem;
+  }
+}
+
+h4, .h4 {
+  font-size: calc(1.275rem + 0.3vw);
+}
+@media (min-width: 1200px) {
+  h4, .h4 {
+    font-size: 1.5rem;
   }
 }
 
@@ -419,7 +444,7 @@ button:not(:disabled) {
   --bs-btn-padding-x: 30px;
   --bs-btn-padding-y: 10px;
   --bs-btn-font-family: ;
-  --bs-btn-font-size: 1rem;
+  --bs-btn-font-size: 1.125rem;
   --bs-btn-font-weight: 400;
   --bs-btn-line-height: 1.5;
   --bs-btn-color: hsl(210deg, 10%, 33%);
@@ -646,10 +671,6 @@ button:not(:disabled) {
 
 .m-2 {
   margin: 0.5rem !important;
-}
-
-.mb-4 {
-  margin-bottom: 1.5rem !important;
 }
 
 .p-5 {
